deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata: 
  name: deploy-sample
  namespace: custom-ns
spec: 
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 2
      maxUnavailable: 1
  revisionHistoryLimit: 4
  paused: false
  replicas: 4
  minReadySeconds: 20
  selector:
    matchLabels:
      app: my-app
  template:
    metadata:
      name: app-container
      labels:
        app: my-app
        role: webserver
        version: v2
    spec:
      containers:
        - name: app
          image: ravikiran529/project:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 80
              protocol: TCP
  
---
apiVersion: v1
kind: Service
metadata:
  name: service-sample
  namespace: custom-ns
  labels:
    role: service
spec:
  selector:
    app: my-app
  ports:
    - port: 80
      targetPort: 80
      nodePort: 32525
  type: NodePort
