ingress.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: ingress-sample
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  rules:
  - host: my-app.com
    http:
      paths:
      - backend:
          serviceName: service-sample
          servicePort: 80
